dropshot/tests/fail/bad_endpoint19.stderr
error[E0277]: the trait bound `std::string::String: SharedExtractor` is not satisfied
  --> tests/fail/bad_endpoint19.rs:27:14
   |
27 |     _param1: String,
   |              ^^^^^^ the trait `SharedExtractor` is not implemented for `std::string::String`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
note: required by a bound in `need_shared_extractor`
  --> tests/fail/bad_endpoint19.rs:21:1
   |
21 | / #[endpoint {
22 | |     method = GET,
23 | |     path = "/test",
24 | | }]
   | |__^ required by this bound in `need_shared_extractor`
...
27 |       _param1: String,
   |                ------ required by a bound in this
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(Arc<RequestContext<()>>, std::string::String, dropshot::Query<QueryParams>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl From<non_extractor_as_last_argument> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::non_extractor_as_last_argument}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint19.rs:25:10
   |
21 | / #[endpoint {
22 | |     method = GET,
23 | |     path = "/test",
24 | | }]
   | |__- required by a bound introduced by this call
25 |   async fn non_extractor_as_last_argument(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(Arc<RequestContext<()>>, std::string::String, dropshot::Query<QueryParams>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl From<non_extractor_as_last_argument> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::non_extractor_as_last_argument}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
